added missing icons

--- a/nav.html
+++ b/nav.html
@@ -26,9 +26,8 @@
                 <span class="dropdown-title">Musique</span>
                 <ul>
                     <li>
-                        <!--TODO #7 : Images manquantes-->
                         <a href="histoire.html#">
-                            <img src="icon_placeholder.png" alt="icon item 11" />
+                            <img src="images/icons/history.png" alt="icon item 11" />
                             <div class="nav-text">Histoire de la musique</div>
                         </a>
                     </li>
@@ -63,9 +62,8 @@
                         </a>
                     </li>
                     <li>
-                        <!--TODO #7 : Images manquantes-->
                         <a href="music/alternative.html#">
-                            <img src="icon_placeholder.png" alt="icon item 17" />
+                            <img src="images/icons/alternative.png" alt="icon item 17" />
                             <div class="nav-text">Alternative</div>
                         </a>
                     </li>
