added artist link metal.html

--- a/music/metal.html
+++ b/music/metal.html
@@ -129,7 +129,9 @@
                         allowfullscreen></iframe>
                 </div>
                 <figcaption>
-                    Deux titres de heavy metal, Holy Diver de Dio (1983) et Run to the Hills de Iron Maiden (1982)
+                    Deux titres de heavy metal, Holy Diver de <a href="https://fr.wikipedia.org/wiki/Dio_(groupe)"
+                        target="_blank">Dio</a> (1983) et Run to the Hills de <a
+                        href="https://fr.wikipedia.org/wiki/Iron_Maiden" target="_blank">Iron Maiden</a> (1982)
                 </figcaption>
             </figure>
             <span class="button"><a href="#">Retour en haut de la page !</a></span>
@@ -186,7 +188,9 @@
                         allowfullscreen></iframe>
                 </div>
                 <figcaption>
-                    Deux titres de thrash metal, Master of Puppets de Metallica (1986) et Raining Blood de Slayer (1986)
+                    Deux titres de thrash metal, Master of Puppets de <a href="https://fr.wikipedia.org/wiki/Metallica"
+                        target="_blank">Metallica</a> (1986) et Raining Blood de <a
+                        href="https://fr.wikipedia.org/wiki/Slayer" target="_blank">Slayer</a> (1986)
                 </figcaption>
             </figure>
             <span class="button"><a href="#">Retour en haut de la page !</a></span>
@@ -240,7 +244,9 @@
                         allowfullscreen></iframe>
                 </div>
                 <figcaption>
-                    Deux titres de black metal, Quintessence de Darkthorne (1995) et Freezing Moon de Mayhem (1994)
+                    Deux titres de black metal, Quintessence de <a href="https://fr.wikipedia.org/wiki/Darkthrone"
+                        target="_blank">Darkthrone</a> (1995) et Freezing Moon de <a
+                        href="https://fr.wikipedia.org/wiki/Mayhem" target="_blank">Mayhem</a> (1994)
                 </figcaption>
             </figure>
             <span class="button"><a href="#">Retour en haut de la page !</a></span>
@@ -294,7 +300,9 @@
                         allowfullscreen></iframe>
                 </div>
                 <figcaption>
-                    Deux titres de death metal, Spirit Crusher de Death (1998) et L'enfant Sauvage de Gojira (2012)
+                    Deux titres de death metal, Spirit Crusher de <a href="https://fr.wikipedia.org/wiki/Death"
+                        target="_blank">Death</a> (1998) et L'enfant Sauvage de <a
+                        href="https://fr.wikipedia.org/wiki/Gojira" target="_blank">Gojira</a> (2012)
                 </figcaption>
             </figure>
             <span class="button"><a href="#">Retour en haut de la page !</a></span>
@@ -351,8 +359,10 @@
                         allowfullscreen></iframe>
                 </div>
                 <figcaption>
-                    Deux titres de power metal, Through The Fire And Flames de DragonForce (2005) et We Drink Your Blood
-                    de Powerwolf (2011)
+                    Deux titres de power metal, Through The Fire And Flames de <a
+                        href="https://fr.wikipedia.org/wiki/DragonForce" target="_blank">DragonForce</a> (2005) et We
+                    Drink Your Blood
+                    de <a href="https://fr.wikipedia.org/wiki/Powerwolf" target="_blank">Powerwolf</a> (2011)
                 </figcaption>
             </figure>
             <span class="button"><a href="#">Retour en haut de la page !</a></span>
@@ -408,7 +418,9 @@
                         allowfullscreen></iframe>
                 </div>
                 <figcaption>
-                    Deux titres de folk metal, reprise Inis Mona de Eluveitie (2008) et Keelhauled de Alestorm
+                    Deux titres de folk metal, reprise Inis Mona de <a href="https://fr.wikipedia.org/wiki/Eluveitie"
+                        target="_blank">Eluveitie</a> (2008) et Keelhauled de <a
+                        href="https://fr.wikipedia.org/wiki/Alestorm" target="_blank">Alestorm</a>
                     (2009)
                 </figcaption>
             </figure>
@@ -465,8 +477,10 @@
                         allowfullscreen></iframe>
                 </div>
                 <figcaption>
-                    Deux titres de doom metal, Black Sabbath de Black Sabbath (1970) et The Dead Leaf Echo de Novembers
-                    Doom (2005)
+                    Deux titres de doom metal, Black Sabbath de <a href="https://fr.wikipedia.org/wiki/Black_Sabbath"
+                        target="_blank">Black
+                        Sabbath</a> (1970) et The Dead Leaf Echo de <a
+                        href="https://en.wikipedia.org/wiki/Novembers_Doom">Novembers Doom</a> (2005)
                 </figcaption>
             </figure>
             <span class="button"><a href="#">Retour en haut de la page !</a></span>
@@ -520,8 +534,10 @@
                         allowfullscreen></iframe>
                 </div>
                 <figcaption>
-                    Deux titres de metal alternatif, Chop Suey! de SOAD (2001) -qui atteind bientôt 1Md de vues- et
-                    Coming Undone de Korn (2005)
+                    Deux titres de metal alternatif, Chop Suey! de <a
+                        href="https://fr.wikipedia.org/wiki/System_of_a_Down" target="_blank">SOAD</a> (2001) -qui
+                    atteind bientôt 1Md de vues- et
+                    Coming Undone de <a href="https://fr.wikipedia.org/wiki/Korn" target="_blank">Korn</a> (2005)
                 </figcaption>
             </figure>
             <span class="button"><a href="#">Retour en haut de la page !</a></span>
@@ -580,8 +596,10 @@
                         allowfullscreen></iframe>
                 </div>
                 <figcaption>
-                    Deux titres de groove metal, Coulds Over California de DevilDriver (2007) et Laid to Rest de Lamb of
-                    God (2004)
+                    Deux titres de groove metal, Coulds Over California de <a
+                        href="https://fr.wikipedia.org/wiki/DevilDriver" target="_blank">DevilDriver</a> (2007) et Laid
+                    to Rest de <a href="https://fr.wikipedia.org/wiki/Lamb_of_God" target="_blank">Lamb of God</a>
+                    (2004)
                 </figcaption>
             </figure>
             <span class="button"><a href="#">Retour en haut de la page !</a></span>
