started alt (The Strokes atm)

--- a/music/alternative.html
+++ b/music/alternative.html
@@ -10,12 +10,12 @@
     <meta name="viewport" content="width=max-device-width, initial-scale=1" />
 </head>
 
-<body>
+<body class="alt-bg">
     <header>
         <div class="title">
             <a href="../index.html" class="logo50"></a>
             <div class="subtitle">
-                Bla bla bla
+                Alternative
             </div>
         </div>
     </header>
@@ -25,7 +25,154 @@
         <img class="navbar-arrow" src="../images/fleche.png" alt="icon navbar" />
     </aside>
     <main>
-        Content here
+        <section class="no-top-separator">
+            <h2>
+                La musique alternative
+            </h2>
+            <p>
+                L'alternative est un style regroupant les musiques n'appartenant à aucun style, ou ne suivant pas les
+                règles habituelles de ces derniers. Elle peut également être définie comme "indépendante" car les
+                artistes n'ont pas de règles à suivre. Les titres dans ce style sont souvent mainstream et souvent
+                médiatisés.
+            </p>
+        </section>
+        <section>
+            <h2>
+                Quelques artistes connus...
+            </h2>
+            <article>
+                <h3>
+                    The Strokes
+                </h3>
+                <figure class="float-right bordered">
+                    <img class="rounded-corners"
+                        src="https://upload.wikimedia.org/wikipedia/commons/6/65/The_Strokes_by_Roger_Woolman.jpg"
+                        width="250" alt="The Strokes" />
+                    <figcaption>
+                        Les artistes du groupe The Strokes
+                    </figcaption>
+                </figure>
+                <p>
+                    Proche du <a href="rock.html#indep">Rock alternatif</a> et de la <a href="pop.html">Pop</a>, le
+                    groupe américain est composé de 5
+                    membres : <a href="https://fr.wikipedia.org/wiki/Julian_Casablancas" target="_blank">Julian
+                        Casablancas</a>
+                    (chanteur), <a href="https://fr.wikipedia.org/wiki/Nick_Valensi" target="_blank">Nick Valensi</a>
+                    (guitariste), <a href="https://fr.wikipedia.org/wiki/Fabrizio_Moretti" target="_blank">Fabrizio
+                        Moretti</a> (batteur), <a href="https://fr.wikipedia.org/wiki/Albert_Hammond_Jr"
+                        target="_blank">Albert Hammond Jr</a> (guitariste) et
+                    <a href="https://fr.wikipedia.org/wiki/Nikolai_Fraiture" target="_blank">Nikolai Fraiture</a>
+                    (bassiste). Le groupe a été créé 1998, mais sort son premier album seulement en 2001. Il connu alors
+                    un grand succès.
+                </p>
+                <p>
+                    Que ce soit la voix ou lse guitares, la sonorité reste "live" qui est la base du groupe.<br />
+                    Le groupe totalise actuellement (2019) 5 albums :
+                </p>
+                <ul>
+                    <li>
+                        <div class="multi-link">
+                            <span>Is This It (2001)</span>
+                            <div>
+                                <a href="https://open.spotify.com/album/2yNaksHgeMQM9Quse463b5" target="_blank"><img
+                                        class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                                <a href="https://fr.wikipedia.org/wiki/The_Strokes#Is_This_It_(2001%E2%80%932003)"
+                                    target="_blank"><img class="wiki-icon" src="../images/icons/wiki.png"
+                                        alt="wikipedia link" /></a>
+                                <a href="https://www.youtube.com/playlist?list=OLAK5uy_kxPqiwIfVH7nzHfsH6gOCNB6FGpnJojNM"
+                                    target="_blank"><img class="yt-icon" src="../images/icons/yt.png"
+                                        alt="youtube link" /></a>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="multi-link">
+                            <span>Room On Fire (2003)</span>
+                            <div>
+                                <a href="https://open.spotify.com/album/5wwZ43m3GAOfdWIxkKHpUz" target="_blank"><img
+                                        class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                                <a href="https://fr.wikipedia.org/wiki/The_Strokes#Room_on_Fire_(2003%E2%80%932005)"
+                                    target="_blank"><img class="wiki-icon" src="../images/icons/wiki.png"
+                                        alt="wikipedia link" /></a>
+                                <a href="https://www.youtube.com/playlist?list=OLAK5uy_maPJVRMRXRbnI955d2PdBCIhy7Y-vTQDE"
+                                    target="_blank"><img class="yt-icon" src="../images/icons/yt.png"
+                                        alt="youtube link" /></a>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="multi-link">
+                            <span>First Impressions of Earth (2005)</span>
+                            <div>
+                                <a href="https://open.spotify.com/album/5rAS8AGeGH1KBxcjTzpVKA" target="_blank"><img
+                                        class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                                <a href="https://en.wikipedia.org/wiki/The_Strokes#First_Impressions_of_Earth_and_hiatus_(2005%E2%80%932007)"
+                                    target="_blank"><img class="wiki-icon" src="../images/icons/wiki.png"
+                                        alt="wikipedia link" /></a>
+                                <a href="https://www.youtube.com/playlist?list=OLAK5uy_lyoMzkFYemmA7Mvzu0BI5ZkTCvdhucrqI"
+                                    target="_blank"><img class="yt-icon" src="../images/icons/yt.png"
+                                        alt="youtube link" /></a>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="multi-link">
+                            <span>Angles (2011)</span>
+                            <div>
+                                <a href="https://open.spotify.com/album/6Jx4cGhWHewTcfKDJKguBQ" target="_blank"><img
+                                        class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                                <a href="https://en.wikipedia.org/wiki/The_Strokes#Angles_(2009%E2%80%932011)"
+                                    target="_blank"><img class="wiki-icon" src="../images/icons/wiki.png"
+                                        alt="wikipedia link" /></a>
+                                <a href="https://www.youtube.com/playlist?list=OLAK5uy_nV-SK8S60EH3x1ReOwNOSc0NIabJlc7Pc"
+                                    target="_blank"><img class="yt-icon" src="../images/icons/yt.png"
+                                        alt="youtube link" /></a>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="multi-link">
+                            <span>Comedown Machine (2013)</span>
+                            <div>
+                                <a href="https://open.spotify.com/album/4WnkQO4xD9ljQooB3VIxCV" target="_blank"><img
+                                        class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                                <a href="https://en.wikipedia.org/wiki/The_Strokes#Comedown_Machine_(2012%E2%88%922015)"
+                                    target="_blank"><img class="wiki-icon" src="../images/icons/wiki.png"
+                                        alt="wikipedia link" /></a>
+                                <a href="https://www.youtube.com/playlist?list=OLAK5uy_mjWdvfzsg7VpVSb33xnv-6wCZFkgA4tI8"
+                                    target="_blank"><img class="yt-icon" src="../images/icons/yt.png"
+                                        alt="youtube link" /></a>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+                <span class="source">Source : wikipedia.org</span>
+                <div class="spotify-integ">
+                    <div>
+                        <iframe src="https://open.spotify.com/embed/track/2wA4NDDRLoEPyA4Zq6J1G1" frameborder="0"
+                            allowtransparency="true" allow="encrypted-media"></iframe>
+                    </div>
+                    <div>
+                        <iframe src="https://open.spotify.com/embed/track/7kzKAuUzOITUauHAhoMoxA" frameborder="0"
+                            allowtransparency="true" allow="encrypted-media"></iframe>
+                    </div>
+                </div>
+                <figure class="double-yt">
+                    <div>
+                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/8sQoX12zo-A"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/TOypSnKFHrE"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+                    <figcaption>
+                        Deux titres des The Strokes, The End Has No End (2003) et Last Nite (2001)
+                    </figcaption>
+                </figure>
+                <span class="button"><a href="#">Retour en haut de la page !</a></span>
+            </article>
+        </section>
     </main>
     <footer>
         <iframe src="../footer.html"></iframe>
