--- a/music/metal.html
+++ b/music/metal.html
@@ -37,8 +37,8 @@
             </p>
             <div class="spotify-integ">
                 <div>
-                    <iframe src="https://open.spotify.com/embed/track/1jzDzZWeSDBg5fhNc3tczV" frameborder="0"
-                        allowtransparency="true" allow="encrypted-media"></iframe>
+                    <iframe src="https://open.spotify.com/embed/track/1jzDzZWeSDBg5fhNc3tczV"
+                        allow="encrypted-media"></iframe>
                 </div>
             </div>
             <figure class="simple-yt">
@@ -136,12 +136,12 @@
             </ul>
             <div class="spotify-integ">
                 <div>
-                    <iframe src="https://open.spotify.com/embed/track/54yLLvpezvPO1lA3GspiZj" frameborder="0"
-                        allowtransparency="true" allow="encrypted-media"></iframe>
+                    <iframe src="https://open.spotify.com/embed/track/54yLLvpezvPO1lA3GspiZj"
+                        allow="encrypted-media"></iframe>
                 </div>
                 <div>
-                    <iframe src="https://open.spotify.com/embed/track/4Zc7TCHzuNwL0AFBlyLdyr" frameborder="0"
-                        allowtransparency="true" allow="encrypted-media"></iframe>
+                    <iframe src="https://open.spotify.com/embed/track/4Zc7TCHzuNwL0AFBlyLdyr"
+                        allow="encrypted-media"></iframe>
                 </div>
             </div>
             <figure class="double-yt">
@@ -222,12 +222,12 @@
             </ul>
             <div class="spotify-integ">
                 <div>
-                    <iframe src="https://open.spotify.com/embed/track/2MuWTIM3b0YEAskbeeFE1i" frameborder="0"
-                        allowtransparency="true" allow="encrypted-media"></iframe>
+                    <iframe src="https://open.spotify.com/embed/track/2MuWTIM3b0YEAskbeeFE1i"
+                        allow="encrypted-media"></iframe>
                 </div>
                 <div>
-                    <iframe src="https://open.spotify.com/embed/track/4fiOTntQKr24p07FvQDHZE" frameborder="0"
-                        allowtransparency="true" allow="encrypted-media"></iframe>
+                    <iframe src="https://open.spotify.com/embed/track/4fiOTntQKr24p07FvQDHZE"
+                        allow="encrypted-media"></iframe>
                 </div>
             </div>
             <figure class="double-yt">
@@ -303,12 +303,12 @@
             </ul>
             <div class="spotify-integ">
                 <div>
-                    <iframe src="https://open.spotify.com/embed/track/0FCG7CbNgbolDMiiufDc4O" frameborder="0"
-                        allowtransparency="true" allow="encrypted-media"></iframe>
+                    <iframe src="https://open.spotify.com/embed/track/0FCG7CbNgbolDMiiufDc4O"
+                        allow="encrypted-media"></iframe>
                 </div>
                 <div>
-                    <iframe src="https://open.spotify.com/embed/track/4AP3a7eEOlz5sTJiWnv2C6" frameborder="0"
-                        allowtransparency="true" allow="encrypted-media"></iframe>
+                    <iframe src="https://open.spotify.com/embed/track/4AP3a7eEOlz5sTJiWnv2C6"
+                        allow="encrypted-media"></iframe>
                 </div>
             </div>
             <figure class="double-yt">
@@ -384,12 +384,12 @@
             </ul>
             <div class="spotify-integ">
                 <div>
-                    <iframe src="https://open.spotify.com/embed/track/3sSonVXqDeoEFj2lM7mpYT" frameborder="0"
-                        allowtransparency="true" allow="encrypted-media"></iframe>
+                    <iframe src="https://open.spotify.com/embed/track/3sSonVXqDeoEFj2lM7mpYT"
+                        allow="encrypted-media"></iframe>
                 </div>
                 <div>
-                    <iframe src="https://open.spotify.com/embed/track/4PWxt9Fy949kUtkEi2GI5V" frameborder="0"
-                        allowtransparency="true" allow="encrypted-media"></iframe>
+                    <iframe src="https://open.spotify.com/embed/track/4PWxt9Fy949kUtkEi2GI5V"
+                        allow="encrypted-media"></iframe>
                 </div>
             </div>
             <figure class="double-yt">
@@ -470,12 +470,12 @@
             </ul>
             <div class="spotify-integ">
                 <div>
-                    <iframe src="https://open.spotify.com/embed/track/1iTb2vi8Bls7QY6CKL2gj2" frameborder="0"
-                        allowtransparency="true" allow="encrypted-media"></iframe>
+                    <iframe src="https://open.spotify.com/embed/track/1iTb2vi8Bls7QY6CKL2gj2"
+                        allow="encrypted-media"></iframe>
                 </div>
                 <div>
-                    <iframe src="https://open.spotify.com/embed/track/3pWvRhml43vlUrGYlIzLM6" frameborder="0"
-                        allowtransparency="true" allow="encrypted-media"></iframe>
+                    <iframe src="https://open.spotify.com/embed/track/3pWvRhml43vlUrGYlIzLM6"
+                        allow="encrypted-media"></iframe>
                 </div>
             </div>
             <figure class="double-yt">
@@ -556,12 +556,12 @@
             </ul>
             <div class="spotify-integ">
                 <div>
-                    <iframe src="https://open.spotify.com/embed/track/0K2OeJUFevovQR3ncNcneB" frameborder="0"
-                        allowtransparency="true" allow="encrypted-media"></iframe>
+                    <iframe src="https://open.spotify.com/embed/track/0K2OeJUFevovQR3ncNcneB"
+                        allow="encrypted-media"></iframe>
                 </div>
                 <div>
-                    <iframe src="https://open.spotify.com/embed/track/2FBmddNjVLziN4AxfUmdQe" frameborder="0"
-                        allowtransparency="true" allow="encrypted-media"></iframe>
+                    <iframe src="https://open.spotify.com/embed/track/2FBmddNjVLziN4AxfUmdQe"
+                        allow="encrypted-media"></iframe>
                 </div>
             </div>
             <figure class="double-yt">
@@ -637,12 +637,12 @@
             </ul>
             <div class="spotify-integ">
                 <div>
-                    <iframe src="https://open.spotify.com/embed/track/1udmPvJoBnqitbeYKKc9mc" frameborder="0"
-                        allowtransparency="true" allow="encrypted-media"></iframe>
+                    <iframe src="https://open.spotify.com/embed/track/1udmPvJoBnqitbeYKKc9mc"
+                        allow="encrypted-media"></iframe>
                 </div>
                 <div>
-                    <iframe src="https://open.spotify.com/embed/track/15vxGRkLxLzL8zed8Pv7Y4" frameborder="0"
-                        allowtransparency="true" allow="encrypted-media"></iframe>
+                    <iframe src="https://open.spotify.com/embed/track/15vxGRkLxLzL8zed8Pv7Y4"
+                        allow="encrypted-media"></iframe>
                 </div>
             </div>
             <figure class="double-yt">
@@ -719,12 +719,12 @@
             </ul>
             <div class="spotify-integ">
                 <div>
-                    <iframe src="https://open.spotify.com/embed/track/2DlHlPMa4M17kufBvI2lEN" frameborder="0"
-                        allowtransparency="true" allow="encrypted-media"></iframe>
+                    <iframe src="https://open.spotify.com/embed/track/2DlHlPMa4M17kufBvI2lEN"
+                        allow="encrypted-media"></iframe>
                 </div>
                 <div>
-                    <iframe src="https://open.spotify.com/embed/track/6p2liQLGoDaLXgND68bfVt" frameborder="0"
-                        allowtransparency="true" allow="encrypted-media"></iframe>
+                    <iframe src="https://open.spotify.com/embed/track/6p2liQLGoDaLXgND68bfVt"
+                        allow="encrypted-media"></iframe>
                 </div>
             </div>
             <figure class="double-yt">
@@ -808,12 +808,12 @@
             </ul>
             <div class="spotify-integ">
                 <div>
-                    <iframe src="https://open.spotify.com/embed/track/21WIpZXepY9HA7NDwYiNaM" frameborder="0"
-                        allowtransparency="true" allow="encrypted-media"></iframe>
+                    <iframe src="https://open.spotify.com/embed/track/21WIpZXepY9HA7NDwYiNaM"
+                        allow="encrypted-media"></iframe>
                 </div>
                 <div>
-                    <iframe src="https://open.spotify.com/embed/track/1yc53HK08sDab7PDFgnLWk" frameborder="0"
-                        allowtransparency="true" allow="encrypted-media"></iframe>
+                    <iframe src="https://open.spotify.com/embed/track/1yc53HK08sDab7PDFgnLWk"
+                        allow="encrypted-media"></iframe>
                 </div>
             </div>
             <figure class="double-yt">
