added artist links alt.html

--- a/music/alternative.html
+++ b/music/alternative.html
@@ -42,12 +42,24 @@
             </h2>
             <article>
                 <h3>
-                    The Strokes
+                    <div class="multi-link">
+                        <span>The Strokes</span>
+                        <div>
+                            <a href="https://open.spotify.com/artist/0epOFNiUfyON9EYx7Tpr6V" target="_blank"><img
+                                    class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                            <a href="https://fr.wikipedia.org/wiki/The_Strokes"
+                                target="_blank"><img class="wiki-icon" src="../images/icons/wiki.png"
+                                    alt="wikipedia link" /></a>
+                            <a href="https://www.youtube.com/user/thestrokes"
+                                target="_blank"><img class="yt-icon" src="../images/icons/yt.png"
+                                    alt="youtube link" /></a>
+                        </div>
+                    </div>
                 </h3>
                 <figure class="float-right bordered">
                     <img class="rounded-corners"
                         src="https://upload.wikimedia.org/wikipedia/commons/6/65/The_Strokes_by_Roger_Woolman.jpg"
-                        width="250" alt="The Strokes" />
+                        width="200" alt="The Strokes" />
                     <figcaption>
                         Les artistes du groupe The Strokes
                     </figcaption>
@@ -146,7 +158,6 @@
                         </div>
                     </li>
                 </ul>
-                <span class="source">Source : wikipedia.org</span>
                 <div class="spotify-integ">
                     <div>
                         <iframe src="https://open.spotify.com/embed/track/2wA4NDDRLoEPyA4Zq6J1G1" frameborder="0"
@@ -170,6 +181,7 @@
                         Deux titres des The Strokes, The End Has No End (2003) et Last Nite (2001)
                     </figcaption>
                 </figure>
+                <span class="source">Source : wikipedia.org</span>
                 <span class="button"><a href="#">Retour en haut de la page !</a></span>
             </article>
         </section>
