fixed space in multi-links inline

--- a/music/rock.html
+++ b/music/rock.html
@@ -42,7 +42,8 @@
                         <a href="https://fr.wikipedia.org/wiki/Bill_Haley" target="_blank"><img class="wiki-icon"
                                 src="../images/icons/wiki.png" alt="wikipedia link" /></a>
                     </div>
-                </div>est considéré comme le premier à populariser le genre.
+                </div>
+                est considéré comme le premier à populariser le genre.
             </div>
             <span class="source">Source : Wikipédia</span>
             <div class="paragraph">
@@ -206,8 +207,7 @@
                             <a href="https://fr.wikipedia.org/wiki/Pink_Floyd" target="_blank"><img class="wiki-icon"
                                     src="../images/icons/wiki.png" alt="wikipedia link" /></a>
                         </div>
-                    </div>
-                    ,
+                    </div>,
                     <div class="multi-link">
                         <span>Genesis</span>
                         <div>
@@ -306,8 +306,7 @@
                             <a href="https://www.youtube.com/user/TheKinksMusic" target="_blank"><img class="yt-icon"
                                     src="../images/icons/yt.png" alt="youtube link" /></a>
                         </div>
-                    </div>
-                    , les principaux représentants du genre sont plutôt
+                    </div>, les principaux représentants du genre sont plutôt
                     <div class="multi-link">
                         <span>Led Zeppelin</span>
                         <div>
@@ -318,8 +317,7 @@
                             <a href="https://www.youtube.com/user/ledzeppelin/" target="_blank"><img class="yt-icon"
                                     src="../images/icons/yt.png" alt="youtube link" /></a>
                         </div>
-                    </div>
-                    ,
+                    </div>,
                     <div class="multi-link">
                         <span>AC/DC</span>
                         <div>
@@ -330,8 +328,7 @@
                             <a href="https://www.youtube.com/user/acdc" target="_blank"><img class="yt-icon"
                                     src="../images/icons/yt.png" alt="youtube link" /></a>
                         </div>
-                    </div>
-                    ,
+                    </div>,
                     <div class="multi-link">
                         <span>Guns N’Roses</span>
                         <div>
@@ -521,8 +518,7 @@
                             <a href="https://www.youtube.com/user/TheCranberriesVEVO" target="_blank"><img class="yt-icon"
                                     src="../images/icons/yt.png" alt="youtube link" /></a>
                         </div>
-                    </div>
-                    , les
+                    </div>, les
                     <div class="multi-link">
                         <span>Red Hot Chili Peppers</span>
                         <div>
@@ -533,8 +529,7 @@
                             <a href="https://www.youtube.com/user/RHCPtv" target="_blank"><img class="yt-icon"
                                     src="../images/icons/yt.png" alt="youtube link" /></a>
                         </div>
-                    </div>
-                    ,
+                    </div>,
                     <div class="multi-link">
                         <span>Fall Out Boy</span>
                         <div>
